Formatted main icons and fixed layout bugs

--- a/v2/sass/_links.scss
+++ b/v2/sass/_links.scss
@@ -1,4 +1,4 @@
 /* Local */
 
 /* Images */
-$banner-image: "http://placehold.it/1280x600/aa3300/111111";
+$banner-image: "http://placehold.it/1280x600/005533/337755";
