--- a/v2/sass/_palette.scss
+++ b/v2/sass/_palette.scss
@@ -18,3 +18,6 @@ $global-font-color-dark:      $dark-letu-blue;
 
 $menu-font-color-light:       white;
 $menu-font-color-dark:        $dark-letu-blue;
+
+$search-field-light-color:    $light-letu-blue;
+$search-field-dark-color:     black;
